- Fixed issue with text alignment in welcome popup

--- a/root.css
+++ b/root.css
@@ -308,7 +308,6 @@
 .signPopUpText {
   position: absolute;
   color: white;
-  inset: 0;
   margin: auto;
   margin-top: 25px;
   height: fit-content;
